Campaign Statistics changes added

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -208,7 +208,10 @@
     "budget_runtime": "Budget & Runtime",
     "total_budget_spent": "Total budget spent",
     "public_procedure_help_text": "If you choose public, every user will be able to see the content from your participants.",
-    "anonymous_proceture_help_text": "If you choose anonymous, only you will see the content from your participants."
+    "anonymous_proceture_help_text": "If you choose anonymous, only you will see the content from your participants.",
+    "application_authorised": "Application authorised",
+    "application_removed": "Application you have removed",
+    "application_removed_by_applicant": "Application removed from applicant"
   },
 
   "campaign_details": {
