--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -38,9 +38,6 @@
   "view_more_comments": "View more comments",
   "view_less_comments": "View less comments",
 
-  "apply_campaign": "Apply for this campaign",
-  "send_message": "Send Message",
-
   "favourite_campaigns": "Favourite Campaigns",
 
   "about": {
@@ -226,7 +223,10 @@
     "applications": "Applications",
     "apply_campaign": "Apply for this campaign",
     "send_message": "Send Message",
-    "campaign_success_apply": "You have successfully applied for this campaign"
+    "campaign_success_apply": "You have successfully applied for this campaign",
+    "subscribers": "Subscribers",
+    "offer": "Offer",
+    "inquiry": "Inquiry"
   },
 
   "messages_modal": {
