Campaign company creator changes added in information page

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -219,12 +219,12 @@
     "end": "End",
     "procedure": "Procedure",
     "target_group": "Target Group",
-    "type": "Type of Application",
+    "type": "Type",
     "applications": "Applications",
     "apply_campaign": "Apply for this campaign",
     "send_message": "Send Message",
     "campaign_success_apply": "You have successfully applied for this campaign",
-    "subscribers": "Subscribers",
+    "followers": "Followers",
     "offer": "Offer",
     "inquiry": "Inquiry"
   },
