--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -292,17 +292,24 @@
   },
 
   "information_menu": {
+    "menu_title": "Information",
     "our_vision": "Our Vision",
     "imprint": "Imprint",
     "campaigns": "Campaigns",
     "campaign_policy": "Campaign Policy",
     "advertising": "Advertising",
-    "advertising_policy": "Advertising Policy",
+    "advertising_policy": "Advertisment Policy",
     "general_terms_and_conditions": "General Terms and Conditions",
-    "data_protection_and_privacy_policy": "Data protection and privacy Policy",
-    "platform_policy": "Platform policy",
+    "data_protection_and_privacy_policy": "Data Protection and Privacy Policy",
+    "platform_policy": "Platform Policy",
     "cancellation_policy": "Cancellation Policy",
-    "terms_of_use": "Terms of use"
+    "terms_of_use": "Terms of use",
+    "cookie_guidelines": "Cookie Guidelines",
+    "community_guidelines": "Community Guidelines",
+    "branded_content_guidelines": "Branded Content Guidelines",
+    "business_terms_condition": "Business Terms and Conditions",
+    "payment_guidelines": "Payment Guidelines",
+    "community_payment_guidelines": "Community Payment Guidelines"
   },
 
   "tool_tips": {
@@ -391,12 +398,31 @@
   },
 
   "service_menu": {
+    "menu_title": "Service",
     "support": "Support",
     "verification": "Verification",
     "feedback": "Feedback",
+    "report_problem": "Report a problem",
     "reported_content": "Reported Content",
     "delete_account": "Delete account",
     "law_enforcement_agency": "Law enforcement agency"
+  },
+
+  "service_feedback": {
+    "title": "Feedback",
+    "content": "This text is an example text. This text is an example text.This text is an example text.This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text. This text is an example text.",
+    "name": "Your name",
+    "username": "Your username",
+    "email": "Your email",
+    "subject": "subject",
+    "text": "Text",
+    "send": "Send",
+    "name_is_required": "Name is required",
+    "username_is_required": "Username is required",
+    "email_is_required": "Email is required",
+    "email_should_be_valid": "Email should be valid",
+    "subject_is_required": "Subject is required",
+    "text_is_required": "Text is required"
   },
 
   "left_sidebar_filter": {
