implemented static offer and inquiry select

--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -524,6 +524,23 @@
     "subscribed": "Subscribed"
   },
 
+  "offer": {
+    "payment": "Payment",
+    "products": "Products",
+    "premium_commission": "Premium/commission",
+    "cooperation": "Cooperation",
+    "other_incentive": "Other incentive"
+  },
+
+  "inquiry": {
+    "images": "Images",
+    "videos": "Videos",
+    "blogs": "Blogs",
+    "audio": "Audio",
+    "skills": "Skills",
+    "custom_work": "Custom Work"
+  },
+
   "gender": {
     "all": "All",
     "male": "Male",
