--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -80,14 +80,21 @@
     "upload_file": "Upload File",
     "yes": "Yes",
     "no": "No",
+    "upload_image": "Upload Image",
+    "upload_video": "Upload Video",
+    "title_of_image_upload": "Create an Image",
+    "title_of_video_upload": "Create a Video",
     "add_image": "Add image",
     "add_video": "Add Video",
+    "add_image_help_text": "Upload your image which you want to show the world.",
+    "add_video_help_text": "Upload your video which you want to show the world.",
+    "video_title_help_text": "You can add a title which users will give an impression about your video.",
     "location_help_text": "Define where you are located",
-    "image_category_help_text": "Define a category in which your image belongs",
-    "video_category_help_text": "Define a category in which your video belongs",
-    "description_help_text": "Enter a description of what you want to tell your community",
-    "image_label_advertisement_help_text": "Label your image as advertisement if you have a product placement",
-    "video_label_advertisement_help_text": "Label your video as advertisement if you have a product placement"
+    "image_category_help_text": "Define a category in which your image belongs.",
+    "video_category_help_text": "Define a category in which your video belongs.",
+    "description_help_text": "Enter a description of what you want to tell your community.",
+    "image_label_advertisement_help_text": "Label your image as advertisement if you have a product placement.",
+    "video_label_advertisement_help_text": "Label your video as advertisement if you have a product placement."
   },
 
   "create_ads": {
@@ -249,7 +256,7 @@
     "radius_help_text": "Define with which radius you want to ad shown",
     "category_help_text": "Define a category in which your campaign belongs",
     "target_group_help_text": "Select whom your campaign addresses",
-    "type_help-text": "Select if the participant have to apply with an image or video",
+    "type_help_text": "Select if the participant have to apply with an image or video",
     "offer_help_text": "Use offers to indicate what you offer in return for doing the campaign",
     "inquiry_help_text": "User inquiry to select what service you are looking for"
   },
@@ -706,7 +713,8 @@
     "follow_btn": "Follow",
     "subscribe_btn": "Subscribed",
     "request_sent_btn": "Request Sent",
-    "no_data": "No Data Available"
+    "no_data": "No Data Available",
+    "cancel": "Cancel"
   },
 
   "profile_community_right_sidebar": {
