Language change using state changes added

--- a/src/lib/translations/languages/de.json
+++ b/src/lib/translations/languages/de.json
@@ -628,7 +628,8 @@
       "unknown": "Unknown",
       "like_you": "Like you",
       "companies": "Companies"
-    }
+    },
+    "no_msg": "No message yet..."
   },
 
   "mobile_sidebar_information": {
@@ -1114,5 +1115,10 @@
     "backoffice_login": "Backoffice log in",
     "enter_password": "Please enter your password here.",
     "proceed": "Processed ?"
+  },
+
+  "text_editor": {
+    "image": "Please Upload Image Files",
+    "video": "Please Upload Video Files"
   }
 }
