--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -690,7 +690,8 @@
       "unknown": "Unknown",
       "like_you": "Like you",
       "companies": "Companies"
-    }
+    },
+    "no_msg": "No message yet..."
   },
 
   "mobile_sidebar_information": {
