--- a/src/lib/translations/languages/en.json
+++ b/src/lib/translations/languages/en.json
@@ -1195,5 +1195,41 @@
   "text_editor": {
     "image": "Please Upload Image Files",
     "video": "Please Upload Video Files"
+  },
+
+  "category": {
+    "craftmen": "Craftmen", 
+    "technology": "Technology", 
+    "travel": "Travel", 
+    "art_culture": "Art & Culture",
+    "beauty_cosmetics": "Beauty & Cosmetics", 
+    "sports_health": "Sports & Health",
+    "animals": "Animals", 
+    "other": "Other", 
+    "outdoor": "Outdoor", 
+    "family": "Family",
+    "automobiles": "Automobiles", 
+    "spirituality": "Spirituality", 
+    "fashion": "Fashion",
+    "charity": "Charity", 
+    "business": "Business", 
+    "movies_photography": "Movies & Photography",
+    "news_politics": "News & Politics", 
+    "entertainment": "Entertainment", 
+    "company": "Company",
+    "gaming": "Gaming", 
+    "education": "Education", 
+    "nature": "Nature", 
+    "food_drink": "Food & Drink",
+    "science": "Science", 
+    "music": "Music", 
+    "home_living": "Home & Living"
+  },
+  
+  "callToAction": {
+    "apply_now": "apply now",
+    "register": "Register",
+    "more": "More",
+    "book_now": "Book now"
   }
 }
